--- a/Hackathon_Tks/Hackathon_Tks/Base.lproj/Main.storyboard
+++ b/Hackathon_Tks/Hackathon_Tks/Base.lproj/Main.storyboard
@@ -752,7 +752,7 @@
                                 </constraints>
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="dxa-uU-gRl">
-                                <rect key="frame" x="0.0" y="64" width="600" height="60"/>
+                                <rect key="frame" x="0.0" y="64" width="600" height="73"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2ea-OU-P3X">
                                         <rect key="frame" x="0.0" y="-64" width="46" height="30"/>
@@ -762,59 +762,8 @@
                                         <rect key="frame" x="0.0" y="-64" width="30" height="30"/>
                                         <state key="normal" title="next"/>
                                     </button>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="sPW-l3-hUR">
-                                        <rect key="frame" x="365" y="30" width="30" height="30"/>
-                                        <state key="normal" title="next"/>
-                                        <connections>
-                                            <action selector="btnNextTouchUp:" destination="BYZ-38-t0r" eventType="touchUpInside" id="qvX-6t-gm1"/>
-                                        </connections>
-                                    </button>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dPu-aK-zqa">
-                                        <rect key="frame" x="285" y="30" width="30" height="30"/>
-                                        <state key="normal" title="play"/>
-                                        <connections>
-                                            <action selector="btnPlayTouchUp:" destination="BYZ-38-t0r" eventType="touchUpInside" id="IJy-LV-tie"/>
-                                        </connections>
-                                    </button>
-                                    <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="tZt-OZ-K1a">
-                                        <rect key="frame" x="192.5" y="0.0" width="215" height="31"/>
-                                        <constraints>
-                                            <constraint firstAttribute="width" constant="211" id="nr3-dX-qXJ"/>
-                                        </constraints>
-                                        <connections>
-                                            <action selector="playSliderValueChanged:" destination="BYZ-38-t0r" eventType="valueChanged" id="zpl-HL-3aA"/>
-                                        </connections>
-                                    </slider>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="RUg-SP-ggf">
-                                        <rect key="frame" x="189" y="30" width="46" height="30"/>
-                                        <state key="normal" title="Button"/>
-                                    </button>
                                 </subviews>
                                 <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                <constraints>
-                                    <constraint firstItem="dPu-aK-zqa" firstAttribute="centerY" secondItem="dxa-uU-gRl" secondAttribute="centerY" id="1wa-dy-VU0"/>
-                                    <constraint firstItem="sPW-l3-hUR" firstAttribute="leading" secondItem="dPu-aK-zqa" secondAttribute="trailing" constant="50" id="7FW-d5-abY"/>
-                                    <constraint firstItem="tZt-OZ-K1a" firstAttribute="centerX" secondItem="dxa-uU-gRl" secondAttribute="centerX" id="BSy-Zw-Rmx"/>
-                                    <constraint firstAttribute="bottom" secondItem="dPu-aK-zqa" secondAttribute="bottom" id="P87-Cc-EpV"/>
-                                    <constraint firstItem="sPW-l3-hUR" firstAttribute="centerY" secondItem="dxa-uU-gRl" secondAttribute="centerY" id="SCu-qP-Lgh"/>
-                                    <constraint firstItem="RUg-SP-ggf" firstAttribute="bottom" secondItem="dPu-aK-zqa" secondAttribute="bottom" id="Sis-Wg-AkC"/>
-                                    <constraint firstItem="dPu-aK-zqa" firstAttribute="centerX" secondItem="dxa-uU-gRl" secondAttribute="centerX" id="UCp-NV-x9T"/>
-                                    <constraint firstItem="RUg-SP-ggf" firstAttribute="centerY" secondItem="dxa-uU-gRl" secondAttribute="centerY" id="VhH-Ho-SCb"/>
-                                    <constraint firstItem="dPu-aK-zqa" firstAttribute="centerX" secondItem="dxa-uU-gRl" secondAttribute="centerX" id="hvv-bM-KUf"/>
-                                    <constraint firstItem="tZt-OZ-K1a" firstAttribute="top" secondItem="dxa-uU-gRl" secondAttribute="top" id="lm3-Yb-6mF"/>
-                                    <constraint firstItem="sPW-l3-hUR" firstAttribute="bottom" secondItem="dPu-aK-zqa" secondAttribute="bottom" id="m6D-Hw-Zi8"/>
-                                    <constraint firstItem="dPu-aK-zqa" firstAttribute="leading" secondItem="RUg-SP-ggf" secondAttribute="trailing" constant="50" id="mFW-mF-Im5"/>
-                                    <constraint firstAttribute="bottom" secondItem="RUg-SP-ggf" secondAttribute="bottom" constant="15" id="o3G-0M-jil"/>
-                                </constraints>
-                                <variation key="default">
-                                    <mask key="constraints">
-                                        <exclude reference="VhH-Ho-SCb"/>
-                                        <exclude reference="o3G-0M-jil"/>
-                                        <exclude reference="1wa-dy-VU0"/>
-                                        <exclude reference="UCp-NV-x9T"/>
-                                        <exclude reference="SCu-qP-Lgh"/>
-                                    </mask>
-                                </variation>
                             </view>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -823,8 +772,8 @@
                             <constraint firstAttribute="trailing" secondItem="ySg-8C-8NJ" secondAttribute="trailing" id="41G-9o-RfS"/>
                             <constraint firstItem="dxa-uU-gRl" firstAttribute="top" secondItem="Rze-9F-Qqt" secondAttribute="bottom" id="4is-jf-hdh"/>
                             <constraint firstAttribute="trailing" secondItem="Rze-9F-Qqt" secondAttribute="trailing" id="7JC-BC-O5n"/>
-                            <constraint firstItem="dxa-uU-gRl" firstAttribute="height" secondItem="8bC-Xf-vdC" secondAttribute="height" multiplier="0.3:3" id="7vm-YQ-bB5"/>
-                            <constraint firstItem="x7A-c9-vbD" firstAttribute="top" secondItem="dxa-uU-gRl" secondAttribute="bottom" id="DRe-0g-taL"/>
+                            <constraint firstItem="dxa-uU-gRl" firstAttribute="height" secondItem="8bC-Xf-vdC" secondAttribute="height" multiplier="0.3:3" constant="13.000000000000007" id="7vm-YQ-bB5"/>
+                            <constraint firstItem="x7A-c9-vbD" firstAttribute="top" secondItem="dxa-uU-gRl" secondAttribute="bottom" constant="-13" id="DRe-0g-taL"/>
                             <constraint firstAttribute="trailing" secondItem="Ehj-Cm-NFi" secondAttribute="trailing" id="Oao-o0-iT3"/>
                             <constraint firstItem="dxa-uU-gRl" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="PeX-HE-ISU"/>
                             <constraint firstItem="Ehj-Cm-NFi" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="QDr-If-YOv"/>
@@ -847,13 +796,10 @@
                     </view>
                     <connections>
                         <outlet property="backImg" destination="uFA-KI-Mly" id="NMy-aF-nbH"/>
-                        <outlet property="btnNextVideo" destination="sPW-l3-hUR" id="VKJ-H0-IoR"/>
-                        <outlet property="btnPre" destination="RUg-SP-ggf" id="c9J-Sk-gWj"/>
                         <outlet property="lblShowMyScore" destination="X1C-Ht-jSO" id="nFF-KE-whB"/>
                         <outlet property="lblTitle" destination="Lzj-2a-wOh" id="HUS-G7-FLA"/>
-                        <outlet property="playSlider" destination="tZt-OZ-K1a" id="E1n-ar-7p6"/>
+                        <outlet property="playerView" destination="dxa-uU-gRl" id="2ds-L6-eDQ"/>
                         <outlet property="scrollView" destination="aKR-ft-Ome" id="cdw-Xw-8FD"/>
-                        <outlet property="tbnPlayVideo" destination="dPu-aK-zqa" id="nf0-it-IE7"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
